--- a/opomniki/opomniki.html
+++ b/opomniki/opomniki.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <title>..:: Opomniki ::..</title>
-    <meta charset="UTF-8">    
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="stili.css">
 </head>
 <body>
+<script type="text/javascript" src="skripta.js"></script>
 <div class="pokrivalo">
 	<table id="uporabniskiObrazec">
 		<tr>
